--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,13 @@
 
 buildscript {
     repositories {
+        mavenCentral()
         jcenter()
+        google()
+        maven { url 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:7.0.4'
 
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
@@ -16,8 +19,11 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         jcenter()
         maven { url 'https://jitpack.io' }
+        google()
+        maven { url 'https://plugins.gradle.org/m2/' }
     }
 }
 
