--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,14 @@ buildscript {
         maven { url 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.2'
+        classpath 'com.android.tools.build:gradle:3.4.2'
 
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        //classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath("org.codehaus.groovy.modules.http-builder:http-builder:0.7.2")
+        classpath("com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3") {
+            exclude group: "org.codehaus.groovy.modules.http-builder", module: "http-builder"
+        }
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
